Fixed a bug where the displays were not shifting numbers to the right because of using the wrong wording for the 'justify-content' properties set on the displays.

--- a/assets/stylesheets/style.css
+++ b/assets/stylesheets/style.css
@@ -87,7 +87,7 @@ table {
 #CONTAINER-MAIN-display {
     display: flex;
     align-items: center;
-    justify-content: right;
+    justify-content: flex-end;
     background-color: blue;
     background: rgba(142, 170, 247, 0.4);
     width: 80px;
@@ -98,7 +98,7 @@ table {
 #CONTAINER-ALT-display {
     display: flex;
     align-items: center;
-    justify-content: right;
+    justify-content: flex-end;
     background: rgba(142, 170, 247, 0.4);
     width: 80px;
     height: 25px;
